apps/todo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
